[gd_scene load_steps=19 format=2]

[ext_resource path="res://compact_scenes/click_advance_01/ClickAdvance.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://compact_scenes/click_advance_01/noise_generation.gdshader" type="Shader" id=3]
[ext_resource path="res://compact_scenes/click_advance_01/height_adjust.gdshader" type="Shader" id=4]
[ext_resource path="res://compact_scenes/click_advance_01/edge_adjust.gdshader" type="Shader" id=5]
[ext_resource path="res://compact_scenes/click_advance_01/worleyinit.gdshader" type="Shader" id=6]
[ext_resource path="res://compact_scenes/click_advance_01/flowmap.gdshader" type="Shader" id=7]
[ext_resource path="res://compact_scenes/click_advance_01/flow_drawer.gdshader" type="Shader" id=8]
[ext_resource path="res://compact_scenes/click_advance_01/blend_maps.gdshader" type="Shader" id=9]
[ext_resource path="res://compact_scenes/click_advance_01/flow_heights.gdshader" type="Shader" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/warping = 0.15

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/x_shape = 0.5
shader_param/depth = 0.5

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/min_height = 0.0
shader_param/max_height = 1.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 6 )
shader_param/grid = 128.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 8 )
shader_param/flow_map = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 9 )
shader_param/blend = 0.5

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 10 )

[node name="ClickAdvance" type="Node2D"]
script = ExtResource( 1 )

[node name="HeightMap" type="Node2D" parent="."]

[node name="NoiseGeneration" type="Node2D" parent="HeightMap"]

[node name="Viewport" type="Viewport" parent="HeightMap/NoiseGeneration"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="HeightMap/NoiseGeneration/Viewport"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="EdgeAdjust" type="Node2D" parent="HeightMap"]

[node name="Viewport" type="Viewport" parent="HeightMap/EdgeAdjust"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="HeightMap/EdgeAdjust/Viewport"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="HeightAdjust" type="Node2D" parent="HeightMap"]

[node name="Viewport" type="Viewport" parent="HeightMap/HeightAdjust"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="HeightMap/HeightAdjust/Viewport"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="FlowMap" type="Node2D" parent="."]

[node name="Viewport" type="Viewport" parent="FlowMap"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="FlowMap/Viewport"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="PointsMap" type="Node2D" parent="."]

[node name="Viewport" type="Viewport" parent="PointsMap"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="PointsMap/Viewport"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="FlowDrawer" type="Node2D" parent="."]

[node name="FlowInput" type="Node2D" parent="FlowDrawer"]

[node name="Viewport" type="Viewport" parent="FlowDrawer/FlowInput"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="FlowDrawer/FlowInput/Viewport"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="BlendDisplay" type="Node2D" parent="."]
visible = false

[node name="Viewport" type="Viewport" parent="BlendDisplay"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="BlendDisplay/Viewport"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="FlowHeights" type="Node2D" parent="."]

[node name="Viewport" type="Viewport" parent="FlowHeights"]
size = Vector2( 1024, 1024 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="FlowHeights/Viewport"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="DisplayTextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RepeatDelayTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="RepeatDelayTimer" to="." method="_on_RepeatDelayTimer_timeout"]
